# PoseSpline

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
include/PoseSpline/: AngularVelocitySampleError.hpp  BSplineBase.hpp  Duration.hpp  Duration_imp.hpp  ErrorInterface.hpp  LinearAccelerateSampleError.hpp  LocalParamizationAdditionalInterfaces.hpp  NumbDifferentiator.hpp  NumericIntegrator.hpp  OmegaExtrinsicTemperalError.hpp  Pose.hpp  PoseLocalParameter.hpp  PoseSpline.hpp  PoseSplineSampleError.hpp  PoseSplineSampleTemporalError.hpp  PoseSplineUtility.hpp  Pose_imp.hpp  Quaternion.hpp  QuaternionError.hpp  QuaternionLocalParameter.hpp  QuaternionOmegaSampleError.hpp  QuaternionSpline.hpp  QuaternionSplineSampleAutoError.hpp  QuaternionSplineSampleError.hpp  Time.hpp  Time_imp.hpp  TypeTraits.hpp  VectorSpaceSpline.hpp  VectorSplineSampleAutoError.hpp  VectorSplineSampleError.hpp  VectorSplineSampleVelocityError.hpp
include/PoseSpline/maplab/: geometry-inl.h  geometry.h  maplab_imu_factor.h  pose_param_jpl.h  quaternion-math-inl.h  quaternion-math.h  quaternion_param_jpl.h
include/ceres/: ErrorInterface.hpp  HomogeneousPointLocalParameterization.hpp  HomogeneousPointParameterBlock.hpp  LocalParamizationAdditionalInterfaces.hpp  ParameterBlockSized.hpp  PoseError.hpp  PoseLocalParameterization.hpp  PoseParameterBlock.hpp  ReprojectionError.hpp
include/ceres/implementation/: ReprojectionError.hpp
include/common/: buffer-inl.hpp  buffer.hpp  config.hpp  csv_trajectory.hpp  file_utils.hpp  macros.hpp  matrix.hpp  path_utils.hpp  rotation_vector.hpp  string_utils.hpp  time_conversions.hpp  transformation.hpp  types.hpp  yaml_serialization.hpp
include/estimator/: Parameters.hpp  VioParametersReader.hpp
include/frontend/triangulate/: ProbabilisticStereoTriangulator.hpp
include/geometry/: Pose.hpp  Pose_imp.hpp  Quaternion.hpp  operator.hpp
include/internal/: OptimizationChecker.h  autodiff.h  pose_local_parameterization.h  variadic_evaluate.h
include/okvis_cv/: Frame.hpp  MultiFrame.hpp
include/okvis_cv/cameras/: CameraBase.hpp  DistortionBase.hpp  EquidistantDistortion.hpp  NCameraSystem.hpp  (+5 more)
include/okvis_util/: Duration.hpp  Duration_imp.hpp  Time.hpp  Time_imp.hpp  assert_macros.hpp  idProvider.hpp  random.hpp  size.hpp  types.hpp
include/pose-spline/: AngularVelocitySampleError.hpp  BSplineBase.hpp  Duration.hpp  LinearAccelerateSampleError.hpp  NumbDifferentiator.hpp  OmegaExtrinsicTemperalError.hpp  Pose.hpp  PoseLocalParameter.hpp  PoseSpline.hpp  PoseSplineSampleError.hpp  PoseSplineUtility.hpp  Pose_imp.hpp  Quaternion.hpp  QuaternionError.hpp  QuaternionLocalParameter.hpp  QuaternionOmegaSampleError.hpp  QuaternionSpline.hpp  QuaternionSplineSampleAutoError.hpp  QuaternionSplineSampleError.hpp  QuaternionSplineUtility.hpp  VectorSpaceSpline.hpp  VectorSplineSampleAutoError.hpp  VectorSplineSampleError.hpp  VectorSplineSampleVelocityError.hpp
include/simulator/: camera_simulate.hpp
include/splines/: BSplineBase.hpp  TypeTraits.hpp  bspline.hpp  operators.hpp
include/utility/: measurement.h  timer.h
src/: AngularVelocitySampleError.cpp  Duration.cpp  LinearAccelerateSampleError.cpp  OmegaExtrinsicTemperalError.cpp  PoseLocalParameter.cpp  PoseSpline.cpp  PoseSplineSampleError.cpp  PoseSplineSampleTemporalError.cpp  PoseSplineUtility.cpp  QuaternionLocalParameter.cpp  QuaternionOmegaSampleError.cpp  QuaternionSpline.cpp  QuaternionSplineSampleError.cpp  QuaternionSplineUtility.cpp  Time.cpp  VectorSpaceSpline.cpp  VectorSplineSampleAutoError.cpp  VectorSplineSampleError.cpp  VectorSplineSampleVelocityError.cpp
src/ceres/: HomogeneousPointError.cpp  HomogeneousPointLocalParameterization.cpp  HomogeneousPointParameterBlock.cpp  LocalParamizationAdditionalInterfaces.cpp  PoseError.cpp  PoseLocalParameterization.cpp  PoseParameterBlock.cpp
src/estimator/: VioParametersReader.cpp
src/frontend/: ProbabilisticStereoTriangulator.cpp  stereo_triangulation.cpp
src/internal/: OptimizationChecker.cpp  pose_local_parameterization.cpp  utility.cpp
src/maplab/: quaternion_param_jpl.cpp
src/okvis_cv/: CameraBase.cpp  NCameraSystem.cpp
src/okvis_util/: Duration.cpp  Time.cpp  random.cpp
src/pose-spline/: AngularVelocitySampleError.cpp  LinearAccelerateSampleError.cpp  OmegaExtrinsicTemperalError.cpp  PoseLocalParameter.cpp  PoseSpline.cpp  PoseSplineSampleError.cpp  PoseSplineUtility.cpp  QuaternionLocalParameter.cpp  QuaternionOmegaSampleError.cpp  QuaternionSpline.cpp  QuaternionSplineSampleError.cpp  QuaternionSplineUtility.cpp  VectorSpaceSpline.cpp  VectorSplineSampleError.cpp  csv_trajectory.cpp
src/simulator/: camera_simulate.cpp
src/spline/: bspline.cpp
src/utility/: Duration.cpp  Time.cpp
test/: AngularVelocitySampleTest.cpp  CMakeLists.txt  FeatureTrackTest.cpp  ImuIntegrateTest.cpp  NumericIntegratorTest.cpp  PoseSplineTest.cpp  PoseTest.cpp  QuaternionCeresTest.cpp  QuaternionOmegaCeresTest.cpp  QuaternionOmegaSampleErrorTest.cpp  QuaternionPrediction.cpp  QuaternionSplineCeresTest.cpp  QuaternionSplineTest.cpp  SplineTest.cpp  UtilityTest.cpp  VectorSpaceSplineTest.cpp  VectorSplineCeresTest.cpp  VectorSplineVelocityCeresTest.cpp  csv.h  testCamera.cpp  testDataReader.cpp  testLinearAccelerateSampleError.cpp  testPinholeProjectFactor.cpp  testPoseSplineSampleError.cpp  testPoseSplineSampleTemporalError.cpp  testProjectError.cpp  testProjection_factor.cpp  testSimulator.cpp  testSplineProjectError.cpp  testSplineProjectError1.cpp  testSplineProjectError3.cpp  testSplineRotateError.cpp  test_JPL_imu_factor.cpp  test_buildOpticalFlowPyramid.cpp  test_dynamic_spline_imu_factor.cpp  test_imu_factor.cpp  test_imu_factor1.cpp  test_main.cpp  test_simulate_project.cpp  test_simulate_spline_project.cpp  (+2 more)
test/frame/: TestFrame.cpp  TestMultiFrame.cpp  TestNCameraSystem.cpp  TestPinholeCamera.cpp
test/pnp/: human_2d_3d_alignment.cpp  pose_local_parameterization.h  project_error.cpp  project_error.h  testProjectError.cpp  test_opencvPnp.cpp  test_pnp.cpp  test_tiny_solver.cpp  tiny_solver.h  tiny_solver_multiple_function.h
(+5 files in other folders)
